# Idryos

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  start.sh
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  config.rs  database.rs  did.rs  error.rs  jwt.rs  main.rs  models.rs  oauth.rs
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
services/p2p/: Dockerfile  go.mod  main.go
